--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
+    "@tensorflow-models/qna": "^1.0.0",
     "babel-loader": "^8.2.2",
     "date-fns": "^2.16.1",
     "excerpts": "^0.0.3",
