--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
     "@tensorflow-models/qna": "^1.0.0",
+    "@tensorflow/tfjs": "^2.8.2",
     "babel-loader": "^8.2.2",
     "date-fns": "^2.16.1",
     "excerpts": "^0.0.3",
