--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
     "@tensorflow-models/qna": "^1.0.0",
-    "@tensorflow/tfjs": "^2.8.2",
+    "@tensorflow/tfjs-node": "^2.8.3",
     "babel-loader": "^8.2.2",
     "date-fns": "^2.16.1",
     "excerpts": "^0.0.3",
@@ -34,7 +34,8 @@
     "webpack": "4.44.1"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "webpack-node-externals": "^2.5.2"
   },
   "prettier": {
     "semi": false,
