--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "webpack": "4.44.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/react": "^17.0.0",
     "prettier": "2.2.1",
+    "typescript": "^4.1.3",
     "webpack-node-externals": "^2.5.2"
   },
   "prettier": {
